fix height and adjust background on mobile devices

--- a/scss/services.scss
+++ b/scss/services.scss
@@ -118,8 +118,7 @@
 .open-modal-4 {
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.045);
-
+  background-color: rgba(0, 0, 0, 0.514);
   position: fixed;
   z-index: 200;
   top: -200vh;
@@ -127,6 +126,7 @@
 
   @include screen(xl) {
     left: 60%;
+    background-color: rgba(0, 0, 0, 0.045);
   }
 
   transform: translate(-50%, -50%);
@@ -138,7 +138,7 @@
 
   > div {
     width: 90%;
-    height: 50%;
+    min-height: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
